# gnu_xforms

./: ChangeLog  Makefile.am  configure.ac  libforms.spec.in
config/: xformsinclude.m4
demos/: Makefile.am  arrowbutton.c  borderwidth.c  boxtype.c  browserall.c  browserop.c  buttonall.c  butttypes.c  canvas.c  chartall.c  chartstrip.c  choice.c  colbrowser.c  colsel.c  colsel1.c  counter.c  crossbut.c  crossbut.h  cursor.c  demo.c  demo05.c  demo06.c  demo27.c  demo33.c  demotest.c  demotest2.c  demotest3.c  dirlist.c  fbrowse.c  fbrowse1.c  fdial.c  flclock.c  folder.c  fonts.c  formbrowser.c  free1.c  freedraw.c  freedraw_leak.c  gl.c  glwin.c  (+58 more)
doc/: part1_defining_forms.texi  part1_doing_interaction.texi  part1_free_objects.texi  part1_getting_started.texi  part1_goodies.texi  part3_buttons.texi  part3_choice_objects.texi  part3_container_objects.texi  part3_deprecated_objects.texi  part3_input_objects.texi  part3_introduction.texi  part3_other_objects.texi  part3_popups.texi  part3_static_objects.texi  part3_valuator_objects.texi  part4_an_example.texi  part4_drawing_objects.texi  part4_events.texi  part4_fl_object.texi  part4_global_structure.texi  part4_new_buttons.texi  part4_preemptive_handler.texi  part5_dirty_tricks.texi  part5_overview.texi  part5_useful_functions.texi  xforms.texi
fd2ps/: Makefile.am  psdraw.c  psobj.c
fdesign/: Makefile.am  fd_attribs.c  fd_control.c  fd_fake.c  fd_file.c  fd_file_fun.c  fd_forms.c  fd_iconinfo.c  fd_initforms.c  fd_main.c  fd_main.h  fd_objects.c  fd_pallette.c  fd_printC.c  fd_rubber.c  fd_select.c  fd_spec.c  fd_super.c  sp_button.c  sp_freeobj.c  sp_freeobj.h  sp_menu.c  sp_twheel.c
fonts/: Makefile.am
fonts/DejaVu/: Makefile.am
fonts/FPL_Neu/: Makefile.am
gl/: Makefile.am  glcanvas.c  glcanvas.h
image/: Makefile.am  flimage.h  image.c  image_disp.c  image_jquant.c  image_postscript.c  image_text.c  ps_draw.c
lib/: Makefile.am  (+68 more)
lib/private/: Makefile.am  pbitmap.h  pbrowser.h  pbutton.h  pcanvas.h  pchart.h  pcheckbut.h  pchoice.h  pclock.h  pcounter.h  pdial.h  pflps.h  pformbrowser.h  pframe.h  pinput.h  plabelbut.h  plightbut.h  pmenu.h  ppixmap.h  ppositioner.h  pround3d.h  proundbut.h  pselect.h  pslider.h  pspinner.h  ptbox.h  ptext.h  pthumbwheel.h  ptimer.h  pvaluator.h  pxyplot.h
(+48 files in other folders)
