include $(top_srcdir)/config/common.am

EXTRA_DIST = \
	flsnprintf.h \
	flvasprintf.h \
	pbitmap.h \
	pbrowser.h \
	pbutton.h \
	pcanvas.h \
	pchart.h \
	pcheckbut.h \
	pchoice.h \
	pclock.h \
	pcounter.h \
	pdial.h \
	pflps.h \
	pformbrowser.h \
	pframe.h \
	pinput.h \
	plabelbut.h \
	plightbut.h \
	pmenu.h \
	pnmenu.h \
	ppixmap.h \
	ppositioner.h \
	proundbut.h \
	pround3d.h \
	pscrollbar.h \
	pselect.h \
	pslider.h \
	pspinner.h \
	ptbox.h \
	ptext.h \
	ptimer.h \
	pthumbwheel.h \
	pvaluator.h \
	pxyplot.h
